# IScript

./: CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: main.yml
lib/: AST.h  CMakeLists.txt  environment.h  interpreter.cpp  interpreter.h  keywords.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  value.cpp  value.h
tests/: CMakeLists.txt  branch_tests.cpp  function_test.cpp  illegal_ops_test.cpp  lexer_fib_test.cpp  lexer_test.cpp  list_test.cpp  loop_and_branch_test.cpp  multi_tests.cpp  nil_test.cpp  parser_test.cpp  slice_test.cpp  stdlib_edge_tests.cpp  types_test.cpp  unary_operator_test.cpp
